# asapdiscovery

./: .codecov.yml  .git-blame-ignore-revs  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  MproP0009.ipynb  README.md  balah  justfile  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
asapdiscovery-alchemy/: README.md  pyproject.toml
asapdiscovery-alchemy/asapdiscovery/alchemy/: __init__.py  alchemize.py  cli.py  interfaces.py  predict.py  utils.py
asapdiscovery-alchemy/asapdiscovery/alchemy/cli/: alchemy.py  bespoke.py  cli.py  prep.py  utils.py
asapdiscovery-alchemy/asapdiscovery/alchemy/schema/: _alchemiscale.py  _util.py  atom_mapping.py  base.py  charge.py  fec.py  forcefield.py  network.py  prep_workflow.py
asapdiscovery-alchemy/asapdiscovery/alchemy/tests/: conftest.py  test_alchemize.py  test_alchemy_prep.py  test_cli.py  test_fec_schema.py  test_forcefield_generation.py  test_utils.py
asapdiscovery-cli/: README.md  pyproject.toml
asapdiscovery-cli/asapdiscovery/cli/: __init__.py  cli.py  cli_args.py
asapdiscovery-cli/asapdiscovery/cli/tests/: test_meta_cli.py
asapdiscovery-cli/asapdiscovery/tests/: test_meta_cli.py
asapdiscovery-data/: MANIFEST.in  README.md  pyproject.toml
asapdiscovery-data/asapdiscovery/data/: .dask_utils.py.swp  __init__.py  cdd_api.py  cli.py  dask_utils.py  deduplicator.py  dynamic_enum.py  enum.py  execution_utils.py  expand_stereo.py  fitness.py  fragalysis.py  hash_utils.py  logging.py  moonshot.py  openeye.py  pdb.py  plip.py  rdkit.py  schema.py  schema_v2.py  sequence.py  services_config.py  utils.py  validation.py  web_utils.py
asapdiscovery-data/asapdiscovery/data/aws/: cli.py  cloudfront.py  s3.py  s3_utils.py
asapdiscovery-data/asapdiscovery/data/backend/: openeye.py  plip.py  rdkit.py
asapdiscovery-data/asapdiscovery/data/cdd/: cdd_api.py
asapdiscovery-data/asapdiscovery/data/cdd_api/: cdd_api.py
asapdiscovery-data/asapdiscovery/data/cli/: cli.py
asapdiscovery-data/asapdiscovery/data/cluster_scripts/: download_mers_pdbs.sh
asapdiscovery-data/asapdiscovery/data/data/: mers-structures.yaml
asapdiscovery-data/asapdiscovery/data/metadata/: __init__.py  aa_fitness_zikv_helicase.tsv  aa_fitness_zikv_ns2b3.json  aa_fitness_zikv_rdrppro.json  fintscore_parameters.yaml  luttens2022ultralarge.yaml  mac1_sars2_seqres.yaml  mers-structures-dimers.yaml  mers.yaml  mpro_mers_seqres.yaml  mpro_sars2_seqres.yaml  nextstrain_aa_fitness_denv_ns2b3.csv  nextstrain_aa_fitness_mers_cov.csv  pdb_alignment.yaml  resources.py  sars2.yaml
asapdiscovery-data/asapdiscovery/data/notebooks/: test_sdf_filtering.ipynb
asapdiscovery-data/asapdiscovery/data/operators/: deduplicator.py  symmetry_expander.py
asapdiscovery-data/asapdiscovery/data/postera/: __init__.py  cli.py  manifold_artefacts.py  manifold_artifacts.py  manifold_data_tags.yaml  manifold_data_validation.py  molecule_set.py  postera_api.py  postera_factory.py  postera_uploader.py
asapdiscovery-data/asapdiscovery/data/readers/: meta_ligand_factory.py  meta_structure_factory.py  molfile.py  structure_dir.py
asapdiscovery-data/asapdiscovery/data/schema/: complex.py  experimental.py  identifiers.py  legacy.py  ligand.py  pairs.py  schema_base.py  sets.py  target.py
asapdiscovery-data/asapdiscovery/data/schema_v2/: complex.py  dynamic_properties.py  experimental.py  fragalysis.py  identifiers.py  ligand.py  meta_ligand_factory.py  meta_structure_factory.py  molfile.py  pairs.py  schema_base.py  sets.py  structure_dir.py  target.py  target_type.yaml
asapdiscovery-data/asapdiscovery/data/scripts/: cdd_to_schema.py  combine_and_label_mpro_sdf.py  create_mers_schema.py  docking_data_to_csv.py  download_and_align_pdbs.py  download_cdd_data.py  download_fragalysis_data.py  download_mers_pdbs.sh  download_moonshot_data.py  download_pdbs.py  enumerate_stereo.py  epik_regression_test.py  expand_stereo.py  filter_fragalysis_by_smarts.py  fragalysis_to_schema.py  ligand_filter_test.py  pdb_download_test.py  sdf_to_smiles_list.py  separate_ligand_script.py  split_fragment_screen.py  split_sdf.py  test-ligand-filter.py  write_cmpd_to_frag_dict.py
asapdiscovery-dataviz/: README.md  pyproject.toml
asapdiscovery-dataviz/asapdiscovery/dataviz/: __init__.py  _gif_blocks.py  _html_blocks.py  cli.py  gif_vis.py  gif_viz.py  graphs.py  html_blocks.py  html_vis.py  html_viz.py  html_viz_v2.py  molecules.py  plotly_dash_functions.py  pymol_extensions.py  show_contacts.py  utils.py  visualizer.py  viz_targets.py
asapdiscovery-docking/: README.md  pyproject.toml
asapdiscovery-docking/asapdiscovery/docking/: __init__.py  analysis.py  analysis_v2.py  cli.py  docking.py  docking_data_validation.py  docking_inputs_schema.py  docking_methods.py  docking_v2.py  mcs.py  modeling.py  openeye.py  posit.py  rocauc.py  scorer.py  scorer_v2.py
asapdiscovery-ml/: README.md  pyproject.toml
asapdiscovery-ml/asapdiscovery/ml/: __init__.py  asap_ensemble_models.yamls  asap_models.yaml  cdd_protocols.yaml  cli.py  cli_args.py  cli_mlops.py  cli_sweep.py  config.py  data_augmentation.py  dataset.py  es.py  inference.py  loss.py  models.py  models.yaml  pretrained_models.py  schema.py  sweep.py  trainer.py  utils.py  viz.py
asapdiscovery-modeling/: README.md  pyproject.toml
asapdiscovery-modeling/asapdiscovery/: __init__.py
asapdiscovery-modeling/asapdiscovery/modeling/: __init__.py  cli.py  modeling.py  protein_prep.py  protein_prep_v2.py  schema.py
asapdiscovery-modeling/scripts/: blast_search.py  run_colabfold.sh
asapdiscovery-simulation/: pyproject.toml
asapdiscovery-simulation/asapdiscovery/: __init__.py
asapdiscovery-simulation/asapdiscovery/simulation/: __init__.py  cli.py  env.yml  schema.py  simulate.py  simulate_v2.py  szybki.py  testing.py  utils.py
asapdiscovery-simulation/md_code_for_hmo/: show_contacts.py  simulate.py  simulate.sh  traj_to_gif_sars2.py
asapdiscovery-workflows/: README.md  pyproject.toml
asapdiscovery-workflows/asapdiscovery/workflows/: __init__.py
(+1661 files in other folders)
