[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "asapdiscovery-alchemy"
#version = "0.0.1"
dynamic = ["version"]
authors = [
  { name="ASAP Discovery", email="benjamin.kaminow@choderalab.org" },
]
description = "Tooling for performing alchemical free energy calculations via OpenFE and alchemiscale"
readme = "README.md"
requires-python = ">=3.9,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/choderalab/asapdiscovery"
"Bug Tracker" = "https://github.com/choderalab/asapdiscovery/issues"

[project.scripts]
asap-alchemy = "asapdiscovery.alchemy.cli.cli:alchemy"

[tool.setuptools.packages.find]
where = ["."]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "0.0.0"
