[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "asapdiscovery-cli"
#version = "0.0.1"
dynamic = ["version"]
authors = [
  { name="ASAP Discovery", email="benjamin.kaminow@choderalab.org" },
]
description = "API and scripts related to downloading and interacting with data from the Collaborative Drug Discovery Vault, Fragalysis, and the PDB"
readme = "README.md"
requires-python = ">=3.9,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/choderalab/asapdiscovery"
"Bug Tracker" = "https://github.com/choderalab/asapdiscovery/issues"

[project.scripts]
asap-cli = "asapdiscovery.cli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.versioningit]


[tool.versioningit.vcs]
default-tag = "0.0.99" # useful for CI/shallow clones
